added CSS: border-colors(thead and for mobile: dividing lines)

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,2 +1,4 @@
 #planet-table .label { font-weight:bold; display:none;}
+#planet-table > :not(:first-child) { border-color: #dee2e6; }
+.table-bordered>:not(caption)>* { border-color: #dee2e6; }
 .no-border {border-top:0 none !important; }
