--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                             <td>{{ planet.surface_water }}{% if planet.surface_water != "unknown"%}%{% endif %}</td>
                             <td>{% if planet.population != "unknown" %}{{ "{:,} people".format(planet.population | int) }}{% else %}{{ planet.population }}{% endif %}</td>
                             {% if planet.residents %}
-                                <td class="gap-2"><a class="btn btn-secondary btn-residents" data-planet_id="{{ planet.id }}" href="{{ url_for('residents', planet_id=planet.id) }}">{{ planet.residents | count() }} resident(s)</td>
+                                <td class="gap-2"><a class="btn btn-secondary btn-residents" data-planet_id="{{ planet.id }}" data-planet_name="{{ planet.name }}" href="{{ url_for('residents', planet_id=planet.id) }}">{{ planet.residents | count() }} resident(s)</td>
                             {% else %}
                                 <td>No known residents</td>
                             {% endif %}
