--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -13,7 +13,7 @@
                     <a class="nav-link" href="#">Voting statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Registration</a>
+                    <a class="nav-link" href="{{ url_for('user_registration') }}">Registration</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
